Fix components for readability

--- a/src/style/Website.scss
+++ b/src/style/Website.scss
@@ -16,6 +16,7 @@ body {
   font-family: $quickSand;
   font-weight: $light;
   background-color: $white;
+  font-size: 13px;
   margin: 0;
 }
  
@@ -23,9 +24,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $bold;
 }
 
-// Header styling
-.header, .about, .quickSearch {
-  padding: 10px
+// Landing page styling
+.landingPage__content {
+  margin: 8px;
+  padding: 8px;
 }
 
 // Quick Search styling
@@ -44,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 // Navigation bar styling
 .navigationBar {
   width: 100%;
-  height: 40px;
+  height: 43px;
   background: $midnightBlue;
 
   .navigationBar__home, .navigationBar__about, .navigationBar__experience {
@@ -55,19 +57,25 @@ h1, h2, h3, h4, h5, h6 {
     padding: 14px;
     text-decoration: none;
   }
+
+  .navigationBar__home:hover, .navigationBar__about:hover, .navigationBar__experience:hover {
+    background-color: $white;
+    border-radius: 2px;
+    color: $midnightBlue;
+  }
 }
 
 // Footer styling
 .footer {
   padding: 0;
   margin: 0;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  background: $midnightBlue;
 }
 
 .footer__navigation {
-  width: 100%;
-  height: 40px;
-  background: $midnightBlue;
-
   a {
     display: block;
     float: left;
@@ -75,5 +83,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 12px;
     padding: 14px;
     text-decoration: none;
+  }
+  a:hover {
+    background-color: $white;
+    color: $midnightBlue;
+    border-radius: 2px;
   }
 }
